--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p><em>Photographer at FNMT-RCM.</em></p>
           <p><em>Founder and CEO of Multimensaje.</em></p>
           <br />
-          <p>I'm an old school developer by heart.</p>
+          <p>I'm an old school developer at heart.</p>
         </td>
       </row>
     </table>
@@ -90,6 +90,7 @@
     <h3>Skills</h3>
     <table>
       <tbody>
+        <!-- ★☆ -->
         <tr>
           <td>Python</td>
           <td>★★★★★</td>
