finishing primitive site

--- a/contact_me.html
+++ b/contact_me.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>My Contact Details</h1>
+    <h1>Contact Me</h1>
     <!-- FIXME real data or pull out public -->
-    <p>My fictional contact data.</p>
+    <p>You can contact me by submiting the following form.</p>
     <hr />
     <br />
     <form action="mailto:jmrod4@gmail.com" method="post">
