--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
           <p><em>Photographer at FNMT-RCM.</em></p>
           <p><em>Founder and CEO of Multimensaje.</em></p>
           <br />
-          <p>I'm an old school developer at heart.</p>
+          <p>
+            I'm an old school developer at heart. Maybe I'll explain someday why
+            this site, designed in 2021, looks like it was made in 1990.
+          </p>
         </td>
       </row>
     </table>
     <hr />
-    <p>
-      Maybe you are wondering
-      <a href="why1990.html">why this site looks like it was made in 1990</a>.
-    </p>
+    <p></p>
     <p>
       <a href="contact_me.html">Contact Me</a> |
       <a href="hobbies.html">My Hobbies</a>
@@ -110,26 +110,6 @@
         <tr>
           <td>C</td>
           <td>★★★</td>
-        </tr>
-        <tr>
-          <td>Java</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>★★★★☆</td>
         </tr>
       </tbody>
     </table>
