--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
           <p><em>Photographer at FNMT-RCM.</em></p>
           <p><em>Founder and CEO of Multimensaje.</em></p>
           <br />
+          <p>I'm an old school developer at heart.</p>
           <p>
-            I'm an old school developer at heart. Maybe I'll explain someday why
-            this site, designed in 2021, looks like it was made in 1990.
+            Maybe I'll explain someday why this site, designed in 2021, looks
+            like it was made in 1990.
           </p>
         </td>
       </row>
